--- a/cross_validation.html
+++ b/cross_validation.html
@@ -462,21 +462,46 @@ div.tocify {
 
 
 <p>Although hypothesis tests provide a way to compare nested linear models, in many situations the approaches under consideration don’t fit nicely in this paradigm. Indeed, for many modern tools and in many applications, the emphasis lies on prediction accuracy rather than on statistical significance. In these cases, cross validation provides a way to compare the predictive performance of competing methods.</p>
-<p>This is the second module in the <a href="topic_iteration.html">Linear Models</a> topic; the relevant slack channel is <a href="https://p8105fall2019.slack.com/messages/CN6D894NL">here</a>.</p>
-<div id="some-slides" class="section level2">
-<h2>Some slides</h2>
-<script async class="speakerdeck-embed" data-id="3d0f3a0545fb422ba6ac50f9665e4b28" data-ratio="1.77777777777778" src="//speakerdeck.com/assets/embed.js"></script>
+<p>This is the second module in the <a href="topic_iteration.html">Linear Models</a> topic.</p>
+<div id="overview" class="section level2 tabset tabset-pills">
+<h2>Overview</h2>
+<div id="learning-objectives" class="section level3">
+<h3>Learning Objectives</h3>
+<p>Implement cross validation to assess the predictive value of a model using tools for iteration.</p>
+</div>
+<div id="slide-deck" class="section level3">
+<h3>Slide Deck</h3>
+<div class="vid_container">
+<p><iframe 
+    src="https://speakerdeck.com/player/3d0f3a0545fb422ba6ac50f9665e4b28" 
+    allowfullscreen 
+    frameborder="0"
+    class="video"> </iframe></p>
+</div>
 <div style="margin-bottom:5px">
-<strong> <a href="https://speakerdeck.com/jeffgoldsmith/p8105-cross-validation" title="Cross validation" target="_blank">Cross validation</a> </strong> from <strong><a href="https://speakerdeck.com/jeffgoldsmith" target="_blank">Jeff Goldsmith</a></strong>.
+<strong> <a href="https://speakerdeck.com/jeffgoldsmith/p8105-cross-validation" title="Cross validation" target="_blank">Cross Validation</a> </strong> from <strong><a href="https://speakerdeck.com/jeffgoldsmith" target="_blank">Jeff Goldsmith</a></strong>.
 </div>
 <p><br></p>
+<hr />
+</div>
+<div id="video-lecture" class="section level3">
+<h3>Video Lecture</h3>
+<div class="vid_container">
+<p><iframe 
+    src="https://www.youtube.com/embed/oHg5SJYRHA0"
+    frameborder="0" allowfullscreen class="video"> </iframe></p>
+</div>
+<hr />
+</div>
 </div>
 <div id="example" class="section level2">
 <h2>Example</h2>
 <p>I’ll write code for today’s content in a new R Markdown document called <code>cross_validation.Rmd</code> in the <code>linear_models</code> directory / repo. The code chunk below loads the usual packages (plus <code>mgcv</code>) and sets a seed for reproducibility.</p>
 <pre class="r"><code>library(tidyverse)
 library(modelr)
+## Warning: package &#39;modelr&#39; was built under R version 3.6.3
 library(mgcv)
+## Warning: package &#39;mgcv&#39; was built under R version 3.6.3
 ## Loading required package: nlme
 ## 
 ## Attaching package: &#39;nlme&#39;
@@ -565,7 +590,7 @@ rmse(wiggly_mod, test_df)
 ##  8     9 0.629   0.0878
 ##  9    10 0.0618  0.392 
 ## 10    11 0.206   1.63  
-## # … with 69 more rows
+## # ... with 69 more rows
 cv_df %&gt;% pull(test) %&gt;% .[[1]] %&gt;% as_tibble
 ## # A tibble: 21 x 3
 ##       id      x      y
@@ -580,7 +605,7 @@ cv_df %&gt;% pull(test) %&gt;% .[[1]] %&gt;% as_tibble
 ##  8    42 0.647   0.158
 ##  9    47 0.0233 -0.148
 ## 10    56 0.0995  1.13 
-## # … with 11 more rows
+## # ... with 11 more rows
 
 cv_df =
   cv_df %&gt;% 
