--- a/linear_models.html
+++ b/linear_models.html
@@ -463,14 +463,37 @@ div.tocify {
 
 <p>Linear regression models are fundamental in statistics and data science. When seeking to understand how covariates are associated with outcomes, linear models are among the first, best options. Although other regression approaches are possible, the flexibility and interpretability and of linear models make them essential.</p>
 <p>This content assumes some familiarity with linear models, and focuses on the implementation of models in R rather than on the theory or interpretation of the models themselves.</p>
-<p>This is the first module in the <a href="topic_linear_models.html">Linear Models</a> topic; the relevant slack channel is <a href="https://p8105fall2019.slack.com/messages/CN6D894NL">here</a>.</p>
-<div id="some-slides" class="section level2">
-<h2>Some slides</h2>
-<script async class="speakerdeck-embed" data-id="3d7ef29c65ab4412a21c18ad2711dca2" data-ratio="1.77777777777778" src="//speakerdeck.com/assets/embed.js"></script>
+<p>This is the first module in the <a href="topic_linear_models.html">Linear Models</a> topic.</p>
+<div id="overview" class="section level2 tabset tabset-pills">
+<h2>Overview</h2>
+<div id="learning-objectives" class="section level3">
+<h3>Learning Objectives</h3>
+<p>Review fundamentals of linear and generalized linear models, fit models in R, and tidy results for further analysis.</p>
+</div>
+<div id="slide-deck" class="section level3">
+<h3>Slide Deck</h3>
+<div class="vid_container">
+<p><iframe 
+    src="https://speakerdeck.com/player/3d7ef29c65ab4412a21c18ad2711dca2" 
+    allowfullscreen 
+    frameborder="0"
+    class="video"> </iframe></p>
+</div>
 <div style="margin-bottom:5px">
-<strong> <a href="https://speakerdeck.com/jeffgoldsmith/p8105-linear-models" title="Linear models" target="_blank">Linear models</a> </strong> from <strong><a href="https://speakerdeck.com/jeffgoldsmith" target="_blank">Jeff Goldsmith</a></strong>.
+<strong> <a href="https://speakerdeck.com/jeffgoldsmith/p8105-linear-models" title="Linear models" target="_blank">Linear Models</a> </strong> from <strong><a href="https://speakerdeck.com/jeffgoldsmith" target="_blank">Jeff Goldsmith</a></strong>.
 </div>
 <p><br></p>
+<hr />
+</div>
+<div id="video-lecture" class="section level3">
+<h3>Video Lecture</h3>
+<div class="vid_container">
+<p><iframe 
+    src="https://www.youtube.com/embed/oHg5SJYRHA0"
+    frameborder="0" allowfullscreen class="video"> </iframe></p>
+</div>
+<hr />
+</div>
 </div>
 <div id="example" class="section level2">
 <h2>Example</h2>
@@ -521,7 +544,7 @@ fitted.values(fit)</code></pre>
 ##   r.squared adj.r.squared sigma statistic   p.value    df  logLik    AIC    BIC
 ##       &lt;dbl&gt;         &lt;dbl&gt; &lt;dbl&gt;     &lt;dbl&gt;     &lt;dbl&gt; &lt;int&gt;   &lt;dbl&gt;  &lt;dbl&gt;  &lt;dbl&gt;
 ## 1    0.0342        0.0341  182.      271. 6.73e-229     5 -2.02e5 4.04e5 4.04e5
-## # … with 2 more variables: deviance &lt;dbl&gt;, df.residual &lt;int&gt;
+## # ... with 2 more variables: deviance &lt;dbl&gt;, df.residual &lt;int&gt;
 
 fit %&gt;% 
   broom::tidy()
@@ -583,26 +606,34 @@ fit %&gt;%
 <p>The <code>modelr</code> package can be used to add residuals and fitted values to a dataframe.</p>
 <pre class="r"><code>modelr::add_residuals(nyc_airbnb, fit)
 ## # A tibble: 40,492 x 6
-##   price stars boro  neighborhood room_type        resid
-##   &lt;dbl&gt; &lt;dbl&gt; &lt;fct&gt; &lt;chr&gt;        &lt;fct&gt;            &lt;dbl&gt;
-## 1    99     5 Bronx City Island  Private room      9.47
-## 2   200    NA Bronx City Island  Private room     NA   
-## 3   300    NA Bronx City Island  Entire home/apt  NA   
-## 4   125     5 Bronx City Island  Entire home/apt  35.5 
-## 5    69     5 Bronx City Island  Private room    -20.5 
-## 6   125     5 Bronx City Island  Entire home/apt  35.5 
-## # … with 40,486 more rows
+##    price stars boro  neighborhood room_type        resid
+##    &lt;dbl&gt; &lt;dbl&gt; &lt;fct&gt; &lt;chr&gt;        &lt;fct&gt;            &lt;dbl&gt;
+##  1    99   5   Bronx City Island  Private room      9.47
+##  2   200  NA   Bronx City Island  Private room     NA   
+##  3   300  NA   Bronx City Island  Entire home/apt  NA   
+##  4   125   5   Bronx City Island  Entire home/apt  35.5 
+##  5    69   5   Bronx City Island  Private room    -20.5 
+##  6   125   5   Bronx City Island  Entire home/apt  35.5 
+##  7    85   5   Bronx City Island  Entire home/apt  -4.53
+##  8    39   4.5 Bronx Allerton     Private room    -34.5 
+##  9    95   5   Bronx Allerton     Entire home/apt   5.47
+## 10   125   4.5 Bronx Allerton     Entire home/apt  51.5 
+## # ... with 40,482 more rows
 modelr::add_predictions(nyc_airbnb, fit)
 ## # A tibble: 40,492 x 6
-##   price stars boro  neighborhood room_type        pred
-##   &lt;dbl&gt; &lt;dbl&gt; &lt;fct&gt; &lt;chr&gt;        &lt;fct&gt;           &lt;dbl&gt;
-## 1    99     5 Bronx City Island  Private room     89.5
-## 2   200    NA Bronx City Island  Private room     NA  
-## 3   300    NA Bronx City Island  Entire home/apt  NA  
-## 4   125     5 Bronx City Island  Entire home/apt  89.5
-## 5    69     5 Bronx City Island  Private room     89.5
-## 6   125     5 Bronx City Island  Entire home/apt  89.5
-## # … with 40,486 more rows</code></pre>
+##    price stars boro  neighborhood room_type        pred
+##    &lt;dbl&gt; &lt;dbl&gt; &lt;fct&gt; &lt;chr&gt;        &lt;fct&gt;           &lt;dbl&gt;
+##  1    99   5   Bronx City Island  Private room     89.5
+##  2   200  NA   Bronx City Island  Private room     NA  
+##  3   300  NA   Bronx City Island  Entire home/apt  NA  
+##  4   125   5   Bronx City Island  Entire home/apt  89.5
+##  5    69   5   Bronx City Island  Private room     89.5
+##  6   125   5   Bronx City Island  Entire home/apt  89.5
+##  7    85   5   Bronx City Island  Entire home/apt  89.5
+##  8    39   4.5 Bronx Allerton     Private room     73.5
+##  9    95   5   Bronx Allerton     Entire home/apt  89.5
+## 10   125   4.5 Bronx Allerton     Entire home/apt  73.5
+## # ... with 40,482 more rows</code></pre>
 <p>Like many things in the tidyverse, the first argument is a dataframe. That makes it easy to included steps adding residuals or predictions in pipeline of commands to conduct inspections and perform diagnostics.</p>
 <pre class="r"><code>nyc_airbnb %&gt;% 
   modelr::add_residuals(fit) %&gt;% 
@@ -627,7 +658,7 @@ fit_alt = lm(price ~ stars + boro + room_type, data = nyc_airbnb)</code></pre>
 <p>The test of interest is implemented in the <code>anova</code> function which, of course, can be summarized using <code>broom::tidy</code>.</p>
 <pre class="r"><code>anova(fit_null, fit_alt) %&gt;% 
   broom::tidy()
-## Warning: Unknown or uninitialised column: `term`.
+## Warning: Unknown or uninitialised column: &#39;term&#39;.
 ## # A tibble: 2 x 6
 ##   res.df         rss    df     sumsq statistic p.value
 ##    &lt;dbl&gt;       &lt;dbl&gt; &lt;dbl&gt;     &lt;dbl&gt;     &lt;dbl&gt;   &lt;dbl&gt;
@@ -853,6 +884,10 @@ manhattan_nest_lm_res =
   lme4::lmer(price ~ stars + room_type + (1 + room_type | neighborhood), data = .) %&gt;% 
   broom::tidy()
 ## boundary (singular) fit: see ?isSingular
+## Warning in bind_rows_(x, .id): binding factor and character vector, coercing
+## into character vector
+## Warning in bind_rows_(x, .id): binding character and factor vector, coercing
+## into character vector
 ## # A tibble: 11 x 5
 ##    term                                   estimate std.error statistic group    
 ##    &lt;chr&gt;                                     &lt;dbl&gt;     &lt;dbl&gt;     &lt;dbl&gt; &lt;chr&gt;    
@@ -860,12 +895,12 @@ manhattan_nest_lm_res =
 ##  2 stars                                    -3.16       5.00    -0.631 fixed    
 ##  3 room_typePrivate room                  -124.         7.80   -15.9   fixed    
 ##  4 room_typeShared room                   -157.        12.9    -12.2   fixed    
-##  5 sd_(Intercept).neighborhood              59.3       NA       NA     neighbor…
-##  6 sd_room_typePrivate room.neighborhood    36.7       NA       NA     neighbor…
-##  7 sd_room_typeShared room.neighborhood     43.6       NA       NA     neighbor…
-##  8 cor_(Intercept).room_typePrivate room…   -0.987     NA       NA     neighbor…
-##  9 cor_(Intercept).room_typeShared room.…   -1.00      NA       NA     neighbor…
-## 10 cor_room_typePrivate room.room_typeSh…    0.992     NA       NA     neighbor…
+##  5 sd_(Intercept).neighborhood              59.3       NA       NA     neighbor~
+##  6 sd_room_typePrivate room.neighborhood    36.7       NA       NA     neighbor~
+##  7 sd_room_typeShared room.neighborhood     43.6       NA       NA     neighbor~
+##  8 cor_(Intercept).room_typePrivate room~   -0.987     NA       NA     neighbor~
+##  9 cor_(Intercept).room_typeShared room.~   -1.00      NA       NA     neighbor~
+## 10 cor_room_typePrivate room.room_typeSh~    0.992     NA       NA     neighbor~
 ## 11 sd_Observation.Residual                 198.        NA       NA     Residual</code></pre>
 <p>Mixed models are pretty great!</p>
 </div>
@@ -966,15 +1001,19 @@ manhattan_nest_lm_res =
   modelr::add_predictions(fit_logistic) %&gt;% 
   mutate(fitted_prob = boot::inv.logit(pred))
 ## # A tibble: 2,827 x 6
-##   resolved victim_age victim_race victim_sex   pred fitted_prob
-##      &lt;dbl&gt;      &lt;dbl&gt; &lt;fct&gt;       &lt;chr&gt;       &lt;dbl&gt;       &lt;dbl&gt;
-## 1        0         17 Black       Male       -0.654       0.342
-## 2        0         26 Black       Male       -0.720       0.327
-## 3        0         21 Black       Male       -0.683       0.335
-## 4        1         61 White       Male       -0.131       0.467
-## 5        1         46 Black       Male       -0.864       0.296
-## 6        1         27 Black       Male       -0.727       0.326
-## # … with 2,821 more rows</code></pre>
+##    resolved victim_age victim_race victim_sex    pred fitted_prob
+##       &lt;dbl&gt;      &lt;dbl&gt; &lt;fct&gt;       &lt;chr&gt;        &lt;dbl&gt;       &lt;dbl&gt;
+##  1        0         17 Black       Male       -0.654        0.342
+##  2        0         26 Black       Male       -0.720        0.327
+##  3        0         21 Black       Male       -0.683        0.335
+##  4        1         61 White       Male       -0.131        0.467
+##  5        1         46 Black       Male       -0.864        0.296
+##  6        1         27 Black       Male       -0.727        0.326
+##  7        1         21 Black       Male       -0.683        0.335
+##  8        1         16 Black       Male       -0.647        0.344
+##  9        1         21 Black       Male       -0.683        0.335
+## 10        1         44 Black       Female      0.0297       0.507
+## # ... with 2,817 more rows</code></pre>
 </div>
 </div>
 <div id="other-materials" class="section level2">
