--- a/bootstrapping.html
+++ b/bootstrapping.html
@@ -462,14 +462,37 @@ div.tocify {
 
 
 <p>Bootstrapping is a popular resampling-based approach to statistical inference, and is helpful when usual statistical methods are intractable or inappropriate. The idea is to draw repeated samples from your original sample <em>with replacement</em>, thereby approximating the repeated sampling framework. Using list columns to store bootstrap samples is natural and provides a “tidy” approach to resampling-based inference.</p>
-<p>This is the third module in the <a href="topic_linear_models.html">Linear Models</a> topic; the relevant slack channel is <a href="https://p8105fall2019.slack.com/messages/CN6D894NL">here</a>.</p>
-<div id="some-slides" class="section level2">
-<h2>Some slides</h2>
-<script async class="speakerdeck-embed" data-id="dd7f4987ef08497696bdc9a66902203a" data-ratio="1.77777777777778" src="//speakerdeck.com/assets/embed.js"></script>
+<p>This is the third module in the <a href="topic_linear_models.html">Linear Models</a> topic.</p>
+<div id="overview" class="section level2 tabset tabset-pills">
+<h2>Overview</h2>
+<div id="learning-objectives" class="section level3">
+<h3>Learning Objectives</h3>
+<p>Implement the bootstrap to obtain inference in non-standard cases using tools for iteration.</p>
+</div>
+<div id="slide-deck" class="section level3">
+<h3>Slide Deck</h3>
+<div class="vid_container">
+<p><iframe 
+    src="https://speakerdeck.com/player/dd7f4987ef08497696bdc9a66902203a" 
+    allowfullscreen 
+    frameborder="0"
+    class="video"> </iframe></p>
+</div>
 <div style="margin-bottom:5px">
 <strong> <a href="https://speakerdeck.com/jeffgoldsmith/p8105-bootstrapping" title="Simulation and Bootstrapping" target="_blank">Bootstrapping</a> </strong> from <strong><a href="https://speakerdeck.com/jeffgoldsmith" target="_blank">Jeff Goldsmith</a></strong>.
 </div>
 <p><br></p>
+<hr />
+</div>
+<div id="video-lecture" class="section level3">
+<h3>Video Lecture</h3>
+<div class="vid_container">
+<p><iframe 
+    src="https://www.youtube.com/embed/oHg5SJYRHA0"
+    frameborder="0" allowfullscreen class="video"> </iframe></p>
+</div>
+<hr />
+</div>
 </div>
 <div id="example" class="section level2">
 <h2>Example</h2>
@@ -602,26 +625,24 @@ lm(y ~ x, data = sim_df_nonconst) %&gt;%
     strap_number = 1:1000,
     strap_sample = rerun(1000, boot_sample(sim_df_nonconst))
   )
-## Warning: `data_frame()` is deprecated as of tibble 1.1.0.
-## Please use `tibble()` instead.
-## This warning is displayed once every 8 hours.
-## Call `lifecycle::last_warnings()` to see where this warning was generated.
+## Warning: `data_frame()` is deprecated, use `tibble()`.
+## This warning is displayed once per session.
 
 boot_straps
 ## # A tibble: 1,000 x 2
 ##    strap_number strap_sample      
 ##           &lt;int&gt; &lt;list&gt;            
-##  1            1 &lt;tibble [250 × 3]&gt;
-##  2            2 &lt;tibble [250 × 3]&gt;
-##  3            3 &lt;tibble [250 × 3]&gt;
-##  4            4 &lt;tibble [250 × 3]&gt;
-##  5            5 &lt;tibble [250 × 3]&gt;
-##  6            6 &lt;tibble [250 × 3]&gt;
-##  7            7 &lt;tibble [250 × 3]&gt;
-##  8            8 &lt;tibble [250 × 3]&gt;
-##  9            9 &lt;tibble [250 × 3]&gt;
-## 10           10 &lt;tibble [250 × 3]&gt;
-## # … with 990 more rows</code></pre>
+##  1            1 &lt;tibble [250 x 3]&gt;
+##  2            2 &lt;tibble [250 x 3]&gt;
+##  3            3 &lt;tibble [250 x 3]&gt;
+##  4            4 &lt;tibble [250 x 3]&gt;
+##  5            5 &lt;tibble [250 x 3]&gt;
+##  6            6 &lt;tibble [250 x 3]&gt;
+##  7            7 &lt;tibble [250 x 3]&gt;
+##  8            8 &lt;tibble [250 x 3]&gt;
+##  9            9 &lt;tibble [250 x 3]&gt;
+## 10           10 &lt;tibble [250 x 3]&gt;
+## # ... with 990 more rows</code></pre>
 <p>We can do a few of quick checks to make sure this has worked as intended. First we’ll look at a couple of bootstrap samples.</p>
 <pre class="r"><code>boot_straps %&gt;% 
   filter(strap_number %in% 1:2) %&gt;% 
@@ -641,7 +662,7 @@ boot_straps
 ##  8 -0.606 -0.106   0.0774
 ##  9 -0.536  0.0227  0.413 
 ## 10 -0.524 -0.536  -0.106 
-## # … with 240 more rows
+## # ... with 240 more rows
 ## 
 ## [[2]]
 ## # A tibble: 250 x 3
@@ -657,7 +678,7 @@ boot_straps
 ##  8 -0.641 -0.416 -0.338 
 ##  9 -0.606 -0.106  0.0774
 ## 10 -0.606 -0.106  0.0774
-## # … with 240 more rows</code></pre>
+## # ... with 240 more rows</code></pre>
 <p>Seems okay – some values are repeated, some don’t appear in both datasets. Next I’ll use <code>ggplot</code> to show some of these datasets, and to include a linear fit for each.</p>
 <pre class="r"><code>boot_straps %&gt;% 
   filter(strap_number %in% 1:3) %&gt;% 
@@ -727,11 +748,8 @@ bootstrap_results %&gt;%
 boot_straps$strap[[1]]
 ## &lt;resample [250 x 3]&gt; 8, 132, 69, 225, 180, 122, 34, 170, 216, 122, ...
 as_data_frame(boot_straps$strap[[1]])
-## Warning: `as_data_frame()` is deprecated as of tibble 2.0.0.
-## Please use `as_tibble()` instead.
-## The signature and semantics have changed, see `?as_tibble`.
-## This warning is displayed once every 8 hours.
-## Call `lifecycle::last_warnings()` to see where this warning was generated.
+## Warning: `as_data_frame()` is deprecated, use `as_tibble()` (but mind the new semantics).
+## This warning is displayed once per session.
 ## # A tibble: 250 x 3
 ##         x  error     y
 ##     &lt;dbl&gt;  &lt;dbl&gt; &lt;dbl&gt;
@@ -745,7 +763,7 @@ as_data_frame(boot_straps$strap[[1]])
 ##  8  1.21   1.55   7.17
 ##  9  2.52   0.528 10.1 
 ## 10  2.34   0.488  9.52
-## # … with 240 more rows</code></pre>
+## # ... with 240 more rows</code></pre>
 <p>Let’s repeat our analysis pipeline using the <code>bootstrap</code> function instead of our own process for drawing samples with replacement.</p>
 <pre class="r"><code>sim_df_nonconst %&gt;% 
   modelr::bootstrap(n = 1000) %&gt;% 
