--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@ $(document).ready(function () {
 
 <p><br><br><img src="images/p8105_logo.jpg" alt="logo" style="width:85%; border:10px solid"><br></p>
 <p>Contemporary biostatistics and data analysis depends on the mastery of tools for computation, exploratory analysis, visualization, dissemination, and reproducibility, in addition to proficiency in traditional statistical techniques. The goal of this course is to provide training in the elements of a complete pipeline for data analysis. We will develop skills in data wrangling, reproducible research, software development, collaboration, and effective communication; all programming will be done in R. Although there are no formal prerequisites for this course, some familiarity with statistics and basic programming knowledge will be helpful.</p>
-<p>This course is being offered in the Fall of 2020 through the Biostatistics Department at the Columbia School of Public Health; the syllabus is available here [<a href="resources/P8105_Syllabus.pdf">coming soon</a> | <a href="resources/P8105_Syllabus.docx">coming soon</a>].</p>
+<p>This course is being offered in the Fall of 2020 through the Biostatistics Department at the Columbia School of Public Health; the syllabus is available here [<a href="resources/P8105_Syllabus.pdf">pdf</a> | <a href="resources/P8105_Syllabus.docx">docx</a>].</p>
 <div id="live-sessions" class="section level3">
 <h3>Live Sessions</h3>
 <p>Live (synchronous) sessions can be accessed through this <a href="https://columbiacuimc.zoom.us/j/97364164791">Zoom link</a> (passcode: 764753), and will be held on the following dates:</p>
@@ -418,13 +418,12 @@ $(document).ready(function () {
 <li>Yuanzhi Yu (yy3019)</li>
 <li>Duzhi Zhao (dz2426)</li>
 </ul>
-</div>
-<div id="calendar" class="section level3">
-<h3>Calendar</h3>
+<!--
+### Calendar
 <center>
-<iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showDate=0&amp;showPrint=0&amp;showCalendars=0&amp;mode=WEEK&amp;height=400&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=bst.p8105%40gmail.com&amp;color=%231B887A&amp;ctz=America%2FNew_York" style="border-width:0" width="800" height="400" frameborder="0" scrolling="no" align="middle">
-</iframe>
+<iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showDate=0&amp;showPrint=0&amp;showCalendars=0&amp;mode=WEEK&amp;height=400&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=bst.p8105%40gmail.com&amp;color=%231B887A&amp;ctz=America%2FNew_York" style="border-width:0" width="800" height="400" frameborder="0" scrolling="no" align="middle"></iframe>
 </center>
+-->
 </div>
 
 <br><br>
